--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -17,20 +17,47 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+     uses: google-github-actions/setup-gcloud@master
+  with:
+    project_id: ${{ secrets.GCP_PROJECT_ID }}
+    service_account_key: ${{ secrets.GCP_SA_KEY }}
+    export_default_credentials: true
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+name: Create VM
+
+on:
+  workflow_dispatch:
+
+jobs:
+  create-vm:
+    runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Create VM
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          gcloud compute instances describe my-instance --zone=us-central1-a || \
+          gcloud compute instances create my-instance \
+   --zone=us-central1-a \
+              --machine-type=e2-medium \
+              --subnet=my-project-vpc \
+              --network-tier=PREMIUM \
+              --maintenance-policy=MIGRATE \
+              --service-account=123456789-compute@developer.gserviceaccount.com \
+              --scopes=https://www.googleapis.com/auth/devstorage.read_only,https://www.googleapis.com/auth/logging.write,https://www.googleapis.com/auth/monitoring.write,https://www.googleapis.com/auth/servicecontrol,https://www.googleapis.com/auth/service.management.readonly,https://www.googleapis.com/auth/trace.append \
+              --image=debian-10-buster-v20210217 \
+              --image-project=debian-cloud \
+              --boot-disk-size=10GB \
+              --boot-disk-type=pd-balanced \
+              --boot-disk-device-name=my-instance \
+              --no-shielded-secure-boot \
+              --shielded-vtpm \
+              --shielded-integrity-monitoring \
+              --reservation-affinity=any
