--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Create VM
         run: |
-         gcloud auth activate-service-account tfcloud-service@responsive-gist-322605.iam.gserviceaccount.com --key-file=https://github.com/sbrTechWorld/gcp-play/tree/main/.github/workflows/key.json --project=macro-truck-32271
+         gcloud auth activate-service-account --key-file=/home/manesachin0683/credentials.json
          gcloud auth list
          gcloud config set project responsive-gist-322605
          gcloud compute instances create VM1 --machine-type n1-standard-2 --zone europe-west2-a --project responsive-gist-322605
