--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -11,7 +11,7 @@ on:
     branches: [ main ]
 
 jobs:
-  create-vm:
+  gcloud-gsutil:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -23,9 +23,14 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Create VM
+      - name: set project
         run: |
+         #export GOOGLE_APPLICATION_CREDENTIALS="/path/to/key.json"
+         #git clone https://github.com/sbrTechWorld/gcp-play.git
+         #cd gcp-play
+         #gcloud auth activate-service-account --key-file=key.json --project=responsive-gist-322605
          gcloud config configurations list
          gcloud config set project responsive-gist-322605
-         gcloud compute instances create VM1 --machine-type n1-standard-2 --zone europe-west2-a --project responsive-gist-322605
-         gcloud compute instances list
+         
+      - name:  gstil command
+        run : gsutil ls
