--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -33,4 +33,6 @@ jobs:
          gcloud config set project responsive-gist-322605
          
       - name:  gstil command
-        run : gsutil mb gs://sachingitgub1
+        run : gsutil mb gs://sachingitgub
+        continue-on-error: true
+              gsutil mb gs://sachinmane1983
