--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -35,4 +35,4 @@ jobs:
       - name:  gstil command
         run : gsutil mb gs://sachingitgub
         continue-on-error: true
-              gsutil mb gs://sachinmane1983
+        run : gsutil mb gs://sachinmane1983
