--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -32,6 +32,8 @@ jobs:
          gcloud config configurations list
          gcloud config set project responsive-gist-322605
          
-      - name:  gstil command
-        run : gsutil mb gs://sachinmane1983
+      - name: gstil command
+        run : gsutil rm -r gs://sachinmane1983
+              gsutil rm -r gs://sachintest121
+         ignore_error : yes
    
