--- a/.github/workflows/sachingcp.yml
+++ b/.github/workflows/sachingcp.yml
@@ -34,8 +34,8 @@ jobs:
          gcloud config set project responsive-gist-322605
          
       - name: gsutil command
-        run : gsutil rm -r gs://sachintest121/ \
-              gsutil rm -r gs://sachingitgub1/
+        run : gsutil rm -r gs://sachintest121/
+              
    
        
             
